# Project_LZY

./: Dockerfile  README.md  build.sh  environment.yml  pyproject.toml  requirements.txt  run.sh
code/: main.py
configs/: base_config.py  config_history.py
data/processed/np_data/: fix_station_10.npy  fix_station_8.npy
draw/: Aug-Project-HParam-BatchSize-8-9-2025,_7_24_25_PM.csv  functions.py  lab-H.py  lab4.py  main.py
models/: FixModel.py  LSTM5_24.py
models/base/: attention.py  convs.py  embedding.py
models/base/sequential/: lstm.py
pre/: cleaner.py  extend_dataset.ipynb  feather_engineering.py
train/: functions.py  loss_function.py  pipeline.py  tools.py
util/: __init__.py  data_loader.py  model_save.py  paths.py
